<resources>
    <string name="app_name">Weatherapp</string>
    <string name="splashtext">Welcome to weather app</string>
    <string name="open_weather_app_key">4b19e843ef52349fbe62c653736081e6</string>
    <string name="place_not_found">There is no such city</string>

    <string name="textview">Choose the city</string>
    <string name="showdescript">Find out the weather</string>
    <string name="share_btn">Share</string>
    <string name="city_wasn_t_choosen">City wasn\'t choosen</string>
    <string name="pressure">pressure</string>
    <string name="tommorow_weather">tommorow weather</string>
    <string name="weekly_average">weekly average</string>


    <string-array name="cities">

        <item>Moscow</item>
        <item>Saint Petersburg</item>
        <item>Krasnodar</item>
        <item>Ekaterinburg</item>
        <item>Novosibirsk</item>
        <item>Khabarovsk</item>
        <item>Vladivostok</item>


    </string-array>

    <string-array name="weather">

        <item>sunny</item>
        <item>rainy</item>
        <item>sunny +30</item>
        <item>sunny +10</item>
        <item>snow</item>
        <item>cold</item>
        <item>Vladivostok 2000!</item>


    </string-array>


    <string-array name="pressure">

        <item>high pressure Moscow</item>
        <item>high pressure Peter</item>
        <item>high pressure Krasnodar</item>
        <item>high pressure Eburg</item>
        <item>high pressure Novosib</item>
        <item>high pressure Khabarovsk</item>
        <item>Vladivostok 2000!</item>


    </string-array>

    <string-array name="w_tommorow">

        <item>tommorow sunny</item>
        <item>tommorow rainy</item>
        <item>tommorow sunny +30</item>
        <item>tommorow sunny +10</item>
        <item>tommorow snow</item>
        <item>tommorow cold</item>
        <item>tommorow Vladivostok 2000!</item>


    </string-array>

    <string-array name="we_weekly">

        <item>average +10</item>
        <item>average rainy</item>
        <item>average +30</item>
        <item>average +10</item>
        <item>average snow</item>
        <item>average -10</item>
        <item>average Vladivostok 2000!</item>


    </string-array>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="no_photo">no photo</string>
    <string name="details">Details</string>
    <string name="appwidget_text">EXAMPLE</string>
    <string name="add_widget">Add widget</string>
    <string name="city">Moscow</string>


</resources>
