<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    >

    <CheckBox
        android:id="@+id/checkboxpressure"
        android:layout_width="385dp"
        android:layout_height="wrap_content"
        android:hint="@string/pressure"
        android:textSize="25sp" />


    <CheckBox
        android:id="@+id/checkboxtommorow"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/tommorow_weather"
        android:textSize="25sp"/>

    <CheckBox
        android:id="@+id/checkboxweekly"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/weekly_average"
        android:textSize="25sp" />

    <android.support.v7.widget.RecyclerView
        android:id="@+id/recycler_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:layout_marginBottom="8dp"/>


</LinearLayout>
