<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center">

    <CheckBox
        android:id="@+id/checkboxpressure"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/pressure"
        android:textSize="25sp"/>


    <CheckBox
        android:id="@+id/checkboxtommorow"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/tommorow_weather"
        android:textSize="25sp"/>

    <CheckBox
        android:id="@+id/checkboxweekly"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/weekly_average"
        android:textSize="25sp" />

    <TextView
        android:id="@+id/textviewlabel"
        android:layout_marginTop="@dimen/standartmargintop"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/textview"
        android:textSize="25sp"/>

    <android.support.v7.widget.RecyclerView
        android:id="@+id/recycler_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:layout_marginBottom="8dp"/>

    <!--<Spinner-->

        <!--android:id="@+id/spinner_for_cities"-->
        <!--android:layout_width="wrap_content"-->
        <!--android:layout_height="wrap_content"-->
        <!--android:layout_marginTop="@dimen/standartmargintop"-->
        <!--android:entries="@array/cities"/>-->


    <!--<Button-->

        <!--android:id="@+id/button_show_weather"-->
        <!--android:layout_width="match_parent"-->
        <!--android:layout_height="wrap_content"-->
        <!--android:layout_marginLeft="@dimen/padding_std"-->
        <!--android:layout_marginRight="@dimen/padding_std"-->
        <!--android:layout_marginTop="@dimen/standartmargintop"-->
        <!--android:text="@string/showdescript"-->
        <!--/>-->

    <TextView

        android:layout_marginTop="@dimen/standartmargintop"
        android:id="@+id/text_view_smth"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        />

</LinearLayout>
