
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true">

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    >

    <TextView

        android:layout_marginTop="@dimen/standartmargintop"
        android:id="@+id/textview_city"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/city_wasn_t_choosen"/>

    <TextView
        android:id="@+id/updated_field"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />
    <TextView

        android:layout_marginTop="@dimen/standartmargintop"
        android:id="@+id/textview_weather"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/city_wasn_t_choosen"/>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/details" />

    <TextView
        android:id="@+id/text_pressure"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:visibility="gone"/>

    <TextView
        android:id="@+id/text_tommorow_weather"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:visibility="gone"/>


    <android.support.design.widget.CoordinatorLayout
        android:id="@+id/details_info_container"
        android:layout_height="match_parent"
        android:layout_width="match_parent">

    ​ ​ ​ ​ ​
    <android.support.design.widget.FloatingActionButton
        android:layout_gravity="bottom|right"
        android:id="@+id/button_share"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/share_btn"
        android:layout_margin="16dp"
        android:src="@drawable/splash"
        app:elevation="6dp"
        app:fabSize="normal"
        app:pressedTranslationZ="12dp"
        >

    </android.support.design.widget.FloatingActionButton>

        />
    </android.support.design.widget.CoordinatorLayout>
</LinearLayout>
</ScrollView>